--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "scripts": {
+    "start": "npx ts-node src/index.ts"
+  },
   "devDependencies": {
     "@types/uuid": "^9.0.0",
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "sinon": "^15.0.0",
+    "supertest": "^6.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
