--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "scripts": {
-    "start": "npx ts-node src/index.ts"
+    "start": "tsc && npx ts-node ./dist/src/index.ts",
+    "build": "tsc",
+    "test": "tsc && mocha ./dist/test"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
     "@types/uuid": "^9.0.0",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
     "sinon": "^15.0.0",
     "supertest": "^6.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "typescript-require": "^0.3.0"
   },
   "dependencies": {
     "@types/express": "^4.17.14",
