--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,12 +1,24 @@
-strategy:
-  matrix:
-    node-version: [10.x, 12.x, 14.x, 15.x]
+name: Node.js CI
 
-steps:
-- uses: actions/checkout@v3
-- name: Use Node.js ${{ matrix.node-version }}
-  uses: actions/setup-node@v3
-  with:
-    node-version: ${{ matrix.node-version }}
-- run: npm ci
-- run: npm test
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          node-version: [10.x, 12.x, 14.x, 15.x]
+
+      steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm test
