--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "@types/sinon": "^10.0.13",
     "@types/uuid": "^9.0.0",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
