--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "tsc && npx ts-node ./dist/src/index.ts",
+    "start": "tsc && npx ts-node ./dist/src/index.js",
     "build": "tsc",
     "test": "tsc && mocha ./dist/test"
   },
