--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "mongoose": "^6.8.0",
     "uuid": "^9.0.0"
   }
